# rust-shell

./: .gitignore  Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
src/: autocomplete.rs  builtin_functions.rs  cli.rs  ext_commands.rs  funcs.rs  history.rs  main.rs
src/builtin_functions/: redirect.rs
