[package]
name = "codecrafters-shell"
version = "0.1.3"
authors = ["Arjav Jain <arjav0703@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.80"
bytes = "1.3.0"
rustyline = "16.0.0"
shlex = "1.3.0"
thiserror = "1.0.38"
clap = { version = "4.5.38", features = ["derive"] }
